SET( CMAKE_CXX_STANDARD 17 )
SET( CMAKE_STANDARD_REQUIRED ON )
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -pthread -Wall -Werror -Wextra" )

CMAKE_MINIMUM_REQUIRED( VERSION 3.11 )

PROJECT( CPP_LIBRARIES )

ADD_SUBDIRECTORY( linked_list )

#ADD_EXECUTABLE( EXE_EXE 
				#main.cpp
#)
#lknalkns
